<resources>
    <string name="app_name">Avocado</string>
    <string name="birthdate_change_title">birth date modify</string>
    <string name="Gender_change_title">Gender</string>
    <string name="changepassword">Change password</string>
    <string name="personalinformation">Personal Information</string>
    <string name="emailaddress">Email Address</string>
    <string name="name">Name</string>
    <string name="phonenumber">Phone number</string>
    <string name="General">General</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="update_information">Update your name, phone numbers and email addresses</string>
    <string name="update_privacy_settings">Control who can see your posts and content,as well as who can search for you</string>
    <string name="account_settings">Account Setting</string>
    <string name="account_settings_explain">Manage information about you</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="update_email">change you\'r email address</string>
    <string name="addemail_title2">To save this setting please enter your Avocado password</string>
    <string name="addemail">Add Email</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_email_format">email address wrong format please enter correct email.</string>
    <string name="whats_your_phonenumber_text">Whats Your Phone Number?</string>
    <string name="phonenumber_title">Phone Number Confirmation</string>
    <string name="mobilephonenumber_text">Mobile phone number</string>
    <string name="continue_text">Continue</string>
    <string name="only_you_will_see_your_phonenumber">Only you will see this on your profile</string>
    <string name="hello">Hello</string>
    <string name="whatsOnYourMind">whats on you\'r mind ?</string>
    <string name="enterText">you need to enter some text</string>
    <string name="select_country">Select Country</string>
    <string name="search">Search...</string>
    <string name="add_new_post">Add New Post</string>
    <string name="cant_send_empty_message">cant send empty message</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="show_profile_picture">Show profile picture</string>
    <string name="post_saved">post saved</string>
    <string name="ERROR_TOAST">something went wrong !</string>
    <string name="ACCOUNT_CREATED">account created successfully </string>
    <string name="PASSWORD_SHORT">password is too short</string>
    <string name="PASSWORD_LONG">password is too long</string>
    <string name="PASSWORD_INVALED">password contain special character</string>
    <string name="WRONG_PASSWORD">Wrong password !</string>
    <string name="EMAIL_PATTERN">email format is incorrect</string>
    <string name="NAME_TOO_LONG">the name is too long</string>
    <string name="NAME_SPACE">the name should not contain spaces</string>
    <string name="field_required">all fields are required !</string>
    <string name="EMAIL_PASSWORD_CHECK">check you email or password</string>
    <string name="LOGIN_SUCCESS">successfully logged in </string>
    <string name="UPDATED">successfully updated </string>
    <string name="UPDATING">updating... </string>
    <string name="permission">you should allow permission</string>
    <string name="POSTED">posted</string>
    <string name="COMMENT_TEXT">you need  to enter some text</string>
    <string name="COMMENT_ADDED">comment added</string>
    <string name="REQUEST_SENT">request sent</string>
    <string name="REQUEST_ACCEPTED">request accepted</string>
    <string name="CHECK_INTERNET">error check your internet connection !</string>
    <string name="GPS_ERROR">There is no gps signal !</string>
    <string name="createUsersTable">createUsersTable</string>
    <string name="registerNewUser">registerNewUser</string>
    <string name="loginWithEmailAndPassword">loginWithEmailAndPassword</string>
    <string name="checkIfEmailExists">checkIfEmailExists</string>
    <string name="getUserIdByEmail">getUserIdByEmail</string>
    <string name="getUserById">getUserById</string>
    <string name="getAllUsers">getAllUsers</string>
    <string name="updateLastNameGenderBirthDate">updateLastNameGenderBirthDate</string>
    <string name="updateCityCountry">updateCityCountry</string>
    <string name="addNewPost">addNewPost</string>
    <string name="requestingFriendPosts">requestingFriendPosts</string>
    <string name="requestPostComments">requestPostComments</string>
    <string name="addNewCommentToPost">addNewCommentToPost</string>
    <string name="gettingUpdatedComments">gettingUpdatedComments</string>
    <string name="sendFriendRequest">sendFriendRequest</string>
    <string name="searchUsersByName">searchUsersByName</string>
    <string name="getInCommeingConnectionsRequest">getInCommeingConnectionsRequest</string>
    <string name="deleteFriendRequest">deleteFriendRequest</string>
    <string name="accepteFriendRequest">accepteFriendRequest</string>
    <string name="GettingChats">GettingChats</string>
    <string name="GettingUserAndChats">GettingUserAndChats</string>
    <string name="GettingUnreadedMessages">GettingUnreadedMessages</string>
    <string name="SendingMessage">SendingMessage</string>
    <string name="CheckingCreatingChat">CheckingCreatingChat</string>
    <string name="likePost">likePost</string>
    <string name="index">index</string>
    <string name="offset">Offset</string>
    <string name="username">Username</string>
    <string name="new_photo">new_photo</string>
    <string name="last_request">Last_request</string>
    <string name="uri">uri</string>
    <string name="State">State</string>
    <string name="Exception">Exception</string>
    <string name="Json_data">Json_data</string>
    <string name="sharedPref_userId">sharedPref_userId</string>
    <string name="sharedPref_userfristname">sharedPref_userfristname</string>
    <string name="sharedPref_userlastname">sharedPref_userlastname</string>
    <string name="sharedPref_profilepic">sharedPref_profilepic</string>
    <string name="private_profile_switch">private_profile_switch</string>
    <string name="location_switch">location_switch</string>
    <string name="fingerPrint">fingerPrint</string>
    <string name="user_first_name">User_first_name</string>
    <string name="user_email">User_Email</string>
    <string name="user_password">User_password</string>
    <string name="user_id">User_id</string>
    <string name="user_last_name">User_last_name</string>
    <string name="user_birth_date">User_birth_date</string>
    <string name="user_gender">User_Gender</string>
    <string name="user_profile_photo">User_profile_photo</string>
    <string name="user_posts_count">User_posts_count</string>
    <string name="user_photos_count">User_photos_count</string>
    <string name="user_connection_count">User_connection_count</string>
    <string name="user_reputation">User_reputation</string>
    <string name="user_current_location">User_current_location</string>
    <string name="user_city">User_city</string>
    <string name="user_country">User_country</string>
    <string name="user_is_active">User_is_active</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="fields_required_toUpdate">all field required for update</string>
    <string name="post_text">Post_text</string>
    <string name="post_image_path">Post_image_path</string>
    <string name="post_type">Post_type</string>
    <string name="post_location">Post_location</string>
    <string name="post_id">Post_id</string>
    <string name="post_likes_count">Post_likes_count</string>
    <string name="post_comments_count">Post_comments_count</string>
    <string name="post_share_count">Post_share_count</string>
    <string name="post_date_time">Post_date_time</string>
    <string name="post_dislike_count">Post_dislike_count</string>
    <string name="post_reports_count">Post_reports_count</string>
    <string name="post_is_shared">Post_is_shared</string>
    <string name="original_post_id">Original_post_id</string>
    <string name="comment_id">Comment_id</string>
    <string name="comment_user_id">Comment_user_id</string>
    <string name="comment_text">Comment_text</string>
    <string name="comment_date_time">Comment_date_time</string>
    <string name="comment_user_name">Comment_user_name</string>
    <string name="comment_user_profile_image_path">Comment_user_profile_image_path</string>
    <string name="comments_incomming_count">Comments_incomming_count</string>
    <string name="request_id">Request_id</string>
    <string name="sender_id">Sender_id</string>
    <string name="receiver_id">Receiver_id</string>
    <string name="date_time_sent">Date_time_sent</string>
    <string name="date_time_accepted">Date_time_accepted</string>
    <string name="text_cmp">Text_cmp</string>
    <string name="is_accepted">Is_accepted</string>
    <string name="message">Message</string>
    <string name="datetime">Datetime</string>
    <string name="chat_id">Chat_id</string>
    <string name="message_id">Message_id</string>
    <string name="bitmap">bitmap</string>
    <string name="imagePath">imagePath</string>
    <string name="current_user_profile">current_user_profile</string>
    <string name="another_user_profile">another_user_profile</string>
    <string name="conversation_fragment">conversation_fragment</string>
    <string name="new_chat_fragment">new_chat_fragment</string>
    <string name="LikesDislikesFragment">LikesDislikesFragment</string>
    <string name="profile_fragment">ProfileFragment</string>
    <string name="showRequests_fragment">showRequests_fragment</string>
    <string name="connection_requests_fragment">connection_requests_fragment</string>
    <string name="post_fragment">post_fragment</string>
    <string name="notification_fragment">notification_fragment</string>
    <string name="chat_fragment">chat_fragment</string>
    <string name="image_fragment">image_fragment</string>
    <string name="commentsDialog">commentsDialog</string>
    <string name="image_list_fragment">image_list_fragment</string>
    <string name="confirm_dialog">confirm_dialog</string>
    <string name="setting_fragment">setting_fragment</string>
    <string name="games_fragment">games_fragment</string>
    <string name="saved_posts_fragment">saved_posts_fragment</string>
    <string name="new_chat">New Chat</string>
    <string name="add_a_picture">add a Picture</string>
    <string name="enter_your_post_text">enter your post text</string>
    <string name="main_feed">Main Feed</string>
    <string name="login">login</string>
    <string name="getting_a_pic">getting a pic</string>
    <string name="connections_requests">Connections Requests</string>
    <string name="chat">Chat</string>
    <string name="add_connections">Add connections</string>
    <string name="friends_only">friends only</string>
    <string name="public_post">public post</string>
    <string-array name="lists">
        <item>one</item>
        <item>two</item>
        <item>three</item>
    </string-array>
    <string name="friends">Friends</string>
    <string name="log_i">avocado</string>
    <string name="give_permission">you should give permission to access the camera and gallery to update your picture !</string>
    <string name="select_date">Select Date</string>
    <string name="update">Update</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="emil">E-mail</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="what_s_your_birthday">What\'s Your Birthday?</string>
    <string name="what_s_your_gender">What\'s Your gender?</string>
</resources>