<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/realtive2_merge_gender_change"
        android:layout_below="@+id/realtive1_merge_center_profile_register"
        android:layout_marginTop="3mm"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_your_gender"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:id="@+id/txtv__merge_gender_change"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radiogrup_merge_gender_change"
            android:layout_below="@+id/txtv__merge_gender_change"
            android:layout_marginTop="3mm"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/radio_btn_male_merge_gender_change"
                style="@style/text"
                android:drawableLeft="@mipmap/male_icon"
                android:paddingLeft="5mm"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/radio_btn_female_merge_gender_change"
                style="@style/text"
                android:drawableLeft="@mipmap/female_icon"
                android:paddingLeft="5mm"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/radiogrup_merge_gender_change"
            android:background="@color/light0"
            android:layout_marginTop="3mm"
            android:textSize="3mm"
            />
    </RelativeLayout>
</merge>
