<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <RelativeLayout
            android:id="@+id/realtive1_registeraccount_page"
            style="@style/Realtive_style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout1_registeraccount"
                style="@style/inputtext_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="19">

                <EditText
                    android:id="@+id/edtxt_firstname_merge_registeraccount"
                    style="@style/edtxt_accountrgister_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/first_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout2_registeraccount"
                style="@style/inputtext_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput_layout1_registeraccount"
                app:counterEnabled="true"
                app:counterMaxLength="19">

                <EditText
                    android:id="@+id/edtxt_lastname_merge_registeraccount"
                    style="@style/edtxt_accountrgister_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout3_registeraccount"
                style="@style/inputtext_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textinput_layout2_registeraccount">

                <EditText
                    android:id="@+id/edtxt_emil_merge_registeraccount"
                    style="@style/edtxt_accountrgister_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/emil"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinput_layout4_registeraccount"
                style="@style/inputtext_layout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput_layout3_registeraccount"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTintMode="src_in">

                <EditText
                    android:id="@+id/edtxt_password_merge_registeraccount"
                    style="@style/edtxt_accountrgister_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_register_merge_registeraccount"
                style="@style/button_style1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinput_layout4_registeraccount"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_register_activity"
                android:text="@string/next"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="24dp"

                />
        </RelativeLayout>
</merge>